--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/bun": "^1.3.8"
   },
   "dependencies": {
-    "@material/material-color-utilities": "github:material-foundation/material-color-utilities?ref=b03ef34",
+    "@material/material-color-utilities": "^0.4.0",
     "fast-png": "^8.0.0"
   },
   "peerDependencies": {
